logo in banner, team photo, enquiry before broucher

--- a/client/src/components/AddProperty.css
+++ b/client/src/components/AddProperty.css
@@ -8,7 +8,7 @@
 }
 
 .property-form{
-  background-image: linear-gradient(rgb(0,0,0,0.3),rgb(0,0,0,0.3)),url(../../public/images/villa9.jpg);
+  background-color: #dfc8b917;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
