--- a/client/src/components/OurPromise.css
+++ b/client/src/components/OurPromise.css
@@ -14,13 +14,13 @@
 .promise-text h3 {
   font-size: 2rem;
   margin-bottom: 1rem;
-  color: #fffdfc;
+  color: #4e4e4e;
 }
 
 .promise-text p {
   font-size: 1.5rem;
   line-height: 1.7;
-  color: #ffffff;
+  color: #4e4e4e;
 }
 
 .enquiry-form {
